@@ -22,6 +22,8 @@ These are long-term features that are desirable or issues that require monitorin
 
 I don't yet have an analogy of a `GIntervalTree` for a set of tuples. So, for now I don't implement anything but rely on `GenomicRanges::findOverlaps`-based algorithms.
 
+__UPDATE__: `GIntevalTree` made defuct in _GenomicRanges_ in BioC 3.2, so will not add to _GenomicTuples_.
+
 ## makeGTuplesFromDataFrame.R
 
 It's already very easy to create a `GTuples` object from a `data.frame` or a `DataFrame`, so I don't see a real need for this. However, I'll happily add a `makeGTuplesFromDataFrame` function if persuaded otherwise. See [this dicussion](https://stat.ethz.ch/pipermail/bioc-devel/2013-October/004777.html) for reasons given for the `makeGRangesFromDataFrame` convenience function.
